# piper-phonemize

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
